refactor: remove adb serial from device registration
