# repos/mobilerpa-center/server/internal/api/routes.go
@@ -1078,7 +1078,6 @@ func listDevices(devices *device.Service, plans *plan.Service) http.HandlerFunc 
 				"brand":                               item.Brand,
 				"model":                               item.Model,
 				"android_id":                          item.AndroidID,
-				"adb_serial":                          item.ADBSerial,
 				"device_link_sn":                      item.DeviceLinkSN,
 				"current_task_id":                     item.CurrentTaskID,
 				"current_step":                        item.CurrentStep,
@@ -1161,7 +1160,6 @@ func listAllDevices(devices *device.Service) http.HandlerFunc {
 				"brand":                               item.Brand,
 				"model":                               item.Model,
 				"android_id":                          item.AndroidID,
-				"adb_serial":                          item.ADBSerial,
 				"device_link_sn":                      item.DeviceLinkSN,
 				"current_task_id":                     item.CurrentTaskID,
 				"current_step":                        item.CurrentStep,
